@@ -7,6 +7,9 @@ TODO:
 - bird and netsnmp don't build with more than one job
 - deco
 
+revision 104:
+- reverted .phony targets (toolchain)
+- fixes gdb build
 revision 103:
 - added 140-printk.patch for 7140 and 7141
 revision 102:
